RESOLVED FIXED194307
Fix DFG's doesGC() for a few more nodes.
https://bugs.webkit.org/show_bug.cgi?id=194307
Summary Fix DFG's doesGC() for a few more nodes.
Mark Lam
Reported 2019-02-05 15:02:03 PST
Specifically, NumberToStringWithValidRadixConstant, RegExpExecNonGlobalOrSticky, RegExpMatchFast, RegExpMatchFastGlobal, and StringFromCharCode.
Attachments
proposed patch. (5.89 KB, patch)
2019-02-05 15:14 PST, Mark Lam
ysuzuki: review+
Radar WebKit Bug Importer
Comment 1 2019-02-05 15:06:35 PST
Mark Lam
Comment 2 2019-02-05 15:14:13 PST
Created attachment 361225 [details] proposed patch.
Yusuke Suzuki
Comment 3 2019-02-05 15:20:17 PST
Comment on attachment 361225 [details] proposed patch. r=me
Mark Lam
Comment 4 2019-02-05 15:34:38 PST
Thanks for the review. Landed in r240998: <http://trac.webkit.org/r240998>.
Brent Fulgham
Comment 5 2019-04-03 16:11:14 PDT
This was also <rdar://problem/49085119>
Note You need to log in before you can comment on or make changes to this bug.